--- a/index.html
+++ b/index.html
@@ -160,6 +160,24 @@
           <div class="display-t">
             <div class="display-tc">
               <div class="col-md-10 col-md-offset-1">
+
+                  <div class="col-md-6 col-sm-6 text-center">
+                      <div class="event-wrap animate-box">
+                        <h3>Haldi</h3>
+                        <div class="event-col">
+                          <i class="icon-clock"></i> <span>9:00 AM</span>
+                          <span>10:30 AM</span>
+                        </div>
+                        <div class="event-col">
+                          <i class="icon-calendar"></i> <span>Wednesday 08</span>
+                          <span>May, 2019</span>
+                        </div>
+                        <p>
+                          Venue: Shivtirth Mangal Karyalay, Shivnagar, Malegaon(Bk)
+                          ,Baramati.
+                        </p>
+                      </div>
+                    </div>l̥
                 <div class="col-md-6 col-sm-6 text-center">
                   <div class="event-wrap animate-box">
                     <h3>Wedding Ceremony</h3>
@@ -176,23 +194,7 @@
                     </p>
                   </div>
                 </div>
-                <div class="col-md-6 col-sm-6 text-center">
-                  <div class="event-wrap animate-box">
-                    <h3>Haldi</h3>
-                    <div class="event-col">
-                      <i class="icon-clock"></i> <span>9:00 AM</span>
-                      <span>10:30 AM</span>
-                    </div>
-                    <div class="event-col">
-                      <i class="icon-calendar"></i> <span>Wednesday 08</span>
-                      <span>May, 2019</span>
-                    </div>
-                    <p>
-                      Venue: Shivtirth Mangal Karyalay, Shivnagar, Malegaon(Bk)
-                      ,Baramati.
-                    </p>
-                  </div>
-                </div>
+               
               </div>
             </div>
           </div>
@@ -593,6 +595,7 @@
       enableUtc: false
     });
   </script>
+  
 </body>
 
 </html>
