--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                           ,Baramati.
                         </p>
                       </div>
-                    </div>l̥
+                    </div>
                 <div class="col-md-6 col-sm-6 text-center">
                   <div class="event-wrap animate-box">
                     <h3>Wedding Ceremony</h3>
