--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
         <div class="row row-bottom-padded-md">
           <div class="col-md-12">
             <ul id="fh5co-gallery-list">
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); ">
-                <a href="images/gallery-1.jpg">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.JPG); ">
+                <a href="images/gallery-1.JPG">
                   <div class="case-studies-summary">
                     <!--  <span>90 Photos</span>
                       <h2>Timer starts now!</h2> -->
@@ -313,8 +313,8 @@
                   </div>
                 </a>
               </li>
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.jpg); ">
-                <a href="images/gallery-4.jpg">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-4.JPG); ">
+                <a href="images/gallery-4.JPG">
                   <div class="case-studies-summary">
                     <!--  <span>12 Photos</span>
                     <h2>Company's Conference Room</h2> -->
@@ -322,16 +322,16 @@
                 </a>
               </li>
 
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.jpg); ">
-                <a href="images/gallery-5.jpg">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-5.JPG); ">
+                <a href="images/gallery-5.JPG">
                   <div class="case-studies-summary">
                     <!-- <span>50 Photos</span>
                     <h2>Useful baskets</h2> -->
                   </div>
                 </a>
               </li>
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.jpg); ">
-                <a href="images/gallery-6.jpg">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-6.JPG); ">
+                <a href="images/gallery-6.JPG">
                   <div class="case-studies-summary">
                     <!-- <span>45 Photos</span>
                     <h2>Skater man in the road</h2> -->
@@ -339,24 +339,24 @@
                 </a>
               </li>
 
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.jpg); ">
-                <a href="images/gallery-7.jpg">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-7.JPG); ">
+                <a href="images/gallery-7.JPG">
                   <div class="case-studies-summary">
                     <!-- <span>35 Photos</span>
                     <h2>Two Glas of Juice</h2>  -->
                   </div>
                 </a>
               </li>
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.jpg); ">
-                <a href="images/gallery-8.jpg">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-8.JPG); ">
+                <a href="images/gallery-8.JPG">
                   <div class="case-studies-summary">
                     <!--  <span>14 Photos</span>
                     <h2>Two Glas of Juice</h2> -->
                   </div>
                 </a>
               </li>
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.jpg); ">
-                <a href="images/gallery-9.jpg">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-9.JPG); ">
+                <a href="images/gallery-9.JPG">
                   <div class="case-studies-summary">
                     <<!-- span>56 Photos</span>
                       <h2>Beautiful sunset</h2> -->
@@ -371,24 +371,24 @@
                   </div>
                 </a>
               </li>
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-11.jpg); ">
-                <a href="images/gallery-11.jpg">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-11.JPG); ">
+                <a href="images/gallery-11.JPG">
                   <div class="case-studies-summary">
                     <!--  <span>90 Photos</span>
                     <h2>Timer starts now!</h2> -->
                   </div>
                 </a>
               </li>
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-12.jpg); ">
-                <a href="images/gallery-12.jpg">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-12.JPG); ">
+                <a href="images/gallery-12.JPG">
                   <div class="case-studies-summary">
                     <!--  <span>90 Photos</span>
                     <h2>Timer starts now!</h2> -->
                   </div>
                 </a>
               </li>
-             <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-13.jpg); ">
-                <a href="images/gallery-13.jpg">
+             <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-13.JPG); ">
+                <a href="images/gallery-13.JPG">
                   <div class="case-studies-summary">
                     <!--   <span>90 Photos</span>
                     <h2>Timer starts now!</h2>  -->
@@ -403,15 +403,15 @@
                   </div>
                 </a>
               </li>
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-15.jpg); ">
-                <a href="images/gallery-15.jpg">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-15.JPG); ">
+                <a href="images/gallery-15.JPG">
                   <div class="case-studies-summary">
                     <!--  <span>90 Photos</span>
                     <h2>Timer starts now!</h2> -->
                   </div>
                 </a>
               </li>
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-16.jpg); ">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-16.JPG); ">
                 <a href="images/gallery-16.jpg">
                   <div class="case-studies-summary">
                     <!--  <span>90 Photos</span>
@@ -419,7 +419,7 @@
                   </div>
                 </a>
               </li>
-              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-17.jpg); ">
+              <li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-17.JPG); ">
                 <a href="images/gallery-17.jpg">
                   <div class="case-studies-summary">
                     <!--  <span>90 Photos</span>
