--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row">
           <div class="col-xs-2">
             <div id="fh5co-logo">
-              <a href="index.html">Wedding<strong>.</strong></a>
+              <a href="index.html">शुभविवाह <strong>.</strong></a>
             </div>
           </div>
           <!-- <div class="col-xs-10 text-right menu-1">
@@ -91,8 +91,8 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="display-t">
               <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                <h1>Rishikesh &amp; Aaishwarya </h1>
-                <h2>We Are Getting Married</h2>
+                <h1>चि. ऋषिकेश  आणि  चि. सौ. का. ऐश्वर्या  </h1>
+                <h2>यांचा शुभविवाह </h2>
                 <div class="simply-countdown simply-countdown-one"></div>
                 <p>
                   <a href="#" class="btn btn-default btn-sm">Save the date</a>
@@ -108,11 +108,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-            <h2>Hello!</h2>
-            <h3>May 8th, 2019 Shivtirth Mangal Karyalay, Shivnagar, Malegaon(Bk)
-              ,Baramati.
+            <h2>विवाह स्थळ </h2>
+            <h3> शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु ), बारामती.
               </h3>
-            <p>We invited you to celebrate our wedding</p>
+            <p>वरील विनंतीस मान देऊन अगत्य येण्याचे करावे. </p>
           </div>
         </div>
         <div class="couple-wrap animate-box">
@@ -121,7 +120,7 @@
               <img src="images/groom.jpg" alt="groom" class="img-responsive" />
             </div>
             <div class="desc-groom">
-              <h3>Rishikesh Taware  </h3>
+              <h3>ऋषिकेश तावरे   </h3>
               <p>
                 <!-- Far far away, behind the word mountains, far from the
                 countries Vokalia and Consonantia, there live the blind texts.
@@ -135,7 +134,7 @@
               <img src="images/bride.jpg" alt="groom" class="img-responsive" />
             </div>
             <div class="desc-bride">
-              <h3>Aaishwarya Yadav</h3>
+              <h3>ऐश्वर्या यादव </h3>
               <p>
                 <!-- Far far away, behind the word mountains, far from the
                 countries Vokalia and Consonantia, there live the blind texts.
@@ -152,8 +151,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-            <span>Our Special Events</span>
-            <h2>Wedding Events</h2>
+            <span>आपले नम्र</span>
+            <h2>समस्त तावरे परिवार </h2>
           </div>
         </div>
         <div class="row">
@@ -162,37 +161,39 @@
               <div class="col-md-10 col-md-offset-1">
                   <div class="col-md-6 col-sm-6 text-center">
                       <div class="event-wrap animate-box">
-                        <h3>Haldi</h3>
+                        <h3>हळदी समारंभ </h3>
                         <div class="event-col">
-                          <i class="icon-clock"></i> <span>9:00 AM</span>
-                          <span>10:30 AM</span>
+                          <i class="icon-clock"></i> <span>सकाळी : ९ वा. - १०:३० मि. </span>
                         </div>
                         <div class="event-col">
-                          <i class="icon-calendar"></i> <span>Wednesday 08</span>
-                          <span>May, 2019</span>
+                          <i class="icon-calendar"></i> <span>बुधवार  दि. ०८/०५/२०१९</span>
                         </div>
                         <p>
-                          Venue: Shivtirth Mangal Karyalay, Shivnagar, Malegaon(Bk)
-                          ,Baramati.
+                          स्थळ :
+
+                          शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु ), बारामती.
                         </p>
                       </div>
                     </div>
                 <div class="col-md-6 col-sm-6 text-center">
                   <div class="event-wrap animate-box">
-                    <h3>Wedding Ceremony</h3>
+                    <h3>विवाह समारंभ </h3>
                     <div class="event-col">
-                      <i class="icon-clock"></i> <span>12:31 PM</span>
+                      <i class="icon-clock"></i> <span>दुपारी : १२ वा. ३१ मि</span>
                     </div>
                     <div class="event-col">
-                      <i class="icon-calendar"></i> <span>Wednesday 08</span>
-                      <span>May, 2019</span>
+                      <i class="icon-calendar"></i> <span>बुधवार  दि. ०८/०५/२०१९</span>                      
                     </div>
                     <p>
-                      Venue: May 8th, 2019 Shivtirth Mangal Karyalay, Shivnagar, Malegaon(Bk)
-                      ,Baramati.
+                      स्थळ :
+
+                      शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु ), बारामती.
                     </p>
                   </div>
-                </div>               
+                </div>  
+                <p>
+                  वरील विनंतीस मान देऊन अगत्य येण्याचे करावे. l̥
+                </p>             
               </div>
             </div>
           </div>
