--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row">
           <div class="col-xs-2">
             <div id="fh5co-logo">
-              <a href="index.html">शुभविवाह <strong>.</strong></a>
+              <a href="index.html">शुभविवाह </a>
             </div>
           </div>
           <!-- <div class="col-xs-10 text-right menu-1">
@@ -109,7 +109,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
             <h2>विवाह स्थळ </h2>
-            <h3> शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु ), बारामती.
+            <h3> शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु), बारामती.
               </h3>
             <p>वरील विनंतीस मान देऊन अगत्य येण्याचे करावे. </p>
           </div>
@@ -151,7 +151,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-            <span>आपले नम्र</span>
+            <span>आपले नम्र </span>
             <h2>समस्त तावरे परिवार </h2>
           </div>
         </div>
@@ -163,15 +163,15 @@
                       <div class="event-wrap animate-box">
                         <h3>हळदी समारंभ </h3>
                         <div class="event-col">
-                          <i class="icon-clock"></i> <span>सकाळी : ९ वा. - १०:३० मि. </span>
+                          <i class="icon-clock"></i> <span>सकाळी</span><span>९ वा. - १०:३० मि. </span>
                         </div>
                         <div class="event-col">
-                          <i class="icon-calendar"></i> <span>बुधवार  दि. ०८/०५/२०१९</span>
+                          <i class="icon-calendar"></i> <span>बुधवार</span><span>दि. ०८/०५/२०१९</span>l̥
                         </div>
                         <p>
                           स्थळ :
 
-                          शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु ), बारामती.
+                          शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु), बारामती.
                         </p>
                       </div>
                     </div>
@@ -187,12 +187,14 @@
                     <p>
                       स्थळ :
 
-                      शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु ), बारामती.
+                      शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु), बारामती.
                     </p>
                   </div>
                 </div>  
                 <p>
-                  वरील विनंतीस मान देऊन अगत्य येण्याचे करावे. l̥
+                  <br/>
+                    <h3>
+                  वरील विनंतीस मान देऊन अगत्य येण्याचे करावे.</h3>l̥
                 </p>             
               </div>
             </div>
