--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     </div>
 
 
-    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
+    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box fadeInUp animated-fast">
                     
         <h3>वरील विनंतीस मान देऊन अगत्य येण्याचे करावे. 
           </h3>
