--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 
     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box fadeInUp animated-fast">
-                    
+             <span>̥</span>       
         <h3>वरील विनंतीस मान देऊन अगत्य येण्याचे करावे. 
           </h3>
         
