--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="display-t">
               <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                <h1>चि. ऋषिकेश  आणि  चि. सौ. का. ऐश्वर्या  </h1>
+                <h1><span>चि. ऋषिकेश</span><span>आणि</span>  <span>चि. सौ. का. ऐश्वर्या </span></h1>
                 <h2>यांचा शुभविवाह </h2>
                 <div class="simply-countdown simply-countdown-one"></div>
                 <p>
