--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="display-t">
               <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                <h1><span>चि. ऋषिकेश</span><br/><span>आणि</span><br/><span>चि. सौ. का. ऐश्वर्या </span></h1>
+                <h1><br/><span>चि. ऋषिकेश</span><br/><span>आणि</span><br/><span>चि. सौ. का. ऐश्वर्या </span></h1>
                 <h2>यांचा शुभविवाह </h2>
                 <div class="simply-countdown simply-countdown-one"></div>
                 <p>
@@ -110,8 +110,7 @@
           <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
             <h2>विवाह स्थळ </h2>
             <h3> शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु), बारामती.
-              </h3>
-            <p>वरील विनंतीस मान देऊन अगत्य येण्याचे करावे. </p>
+              </h3>          
           </div>
         </div>
         <div class="couple-wrap animate-box">
@@ -151,7 +150,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-            <span>आपले नम्र </span>
+            <span>आपले नम्र <br/></span>
             <h2>समस्त तावरे परिवार </h2>
           </div>
         </div>
