--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row">
           <div class="col-xs-2">
             <div id="fh5co-logo">
-              <a href="index.html">शुभविवाह </a>
+              <a href="index.html">Wedding<strong>.</strong></a>
             </div>
           </div>
           <!-- <div class="col-xs-10 text-right menu-1">
@@ -91,8 +91,8 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="display-t">
               <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                <h1><br/><span>चि. ऋषिकेश</span><br/><span>आणि</span><br/><span>चि. सौ. का. ऐश्वर्या </span></h1>
-                <h2>यांचा शुभविवाह </h2>
+                <h1>Rishikesh &amp; Aaishwarya </h1>
+                <h2>We Are Getting Married</h2>
                 <div class="simply-countdown simply-countdown-one"></div>
                 <p>
                   <a href="#" class="btn btn-default btn-sm">Save the date</a>
@@ -108,9 +108,11 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-            <h2>विवाह स्थळ </h2>
-            <h3> शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु), बारामती.
-              </h3>          
+            <h2>Venue:</h2>
+            <h3>May 8th, 2019 Shivtirth Mangal Karyalay, Shivnagar, Malegaon(Bk)
+              ,Baramati.
+              </h3>
+            <p>We invited you to celebrate our wedding</p>
           </div>
         </div>
         <div class="couple-wrap animate-box">
@@ -119,7 +121,7 @@
               <img src="images/groom.jpg" alt="groom" class="img-responsive" />
             </div>
             <div class="desc-groom">
-              <h3>ऋषिकेश तावरे   </h3>
+              <h3>Rishikesh Taware  </h3>
               <p>
                 <!-- Far far away, behind the word mountains, far from the
                 countries Vokalia and Consonantia, there live the blind texts.
@@ -133,7 +135,7 @@
               <img src="images/bride.jpg" alt="groom" class="img-responsive" />
             </div>
             <div class="desc-bride">
-              <h3>ऐश्वर्या यादव </h3>
+              <h3>Aaishwarya Yadav</h3>
               <p>
                 <!-- Far far away, behind the word mountains, far from the
                 countries Vokalia and Consonantia, there live the blind texts.
@@ -150,8 +152,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-            <span>आपले नम्र <br/></span>
-            <h2>समस्त तावरे परिवार </h2>
+            <span>Our Special Events</span>
+            <h2>Wedding Events</h2>
           </div>
         </div>
         <div class="row">
@@ -160,52 +162,43 @@
               <div class="col-md-10 col-md-offset-1">
                   <div class="col-md-6 col-sm-6 text-center">
                       <div class="event-wrap animate-box">
-                        <h3>हळदी समारंभ </h3>
+                        <h3>Haldi</h3>
                         <div class="event-col">
-                          <i class="icon-clock"></i> <span>सकाळी</span><span>९ वा. - १०:३० मि. </span>
+                          <i class="icon-clock"></i> <span>9:00 AM</span>
+                          <span>10:30 AM</span>
                         </div>
                         <div class="event-col">
-                          <i class="icon-calendar"></i> <span>बुधवार</span><span>दि. ०८/०५/२०१९</span>
+                          <i class="icon-calendar"></i> <span>Wednesday 08</span>
+                          <span>May, 2019</span>
                         </div>
                         <p>
-                          स्थळ :
-
-                          शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु), बारामती.
+                          Venue: Shivtirth Mangal Karyalay, Shivnagar, Malegaon(Bk)
+                          ,Baramati.
                         </p>
                       </div>
                     </div>
                 <div class="col-md-6 col-sm-6 text-center">
                   <div class="event-wrap animate-box">
-                    <h3>विवाह समारंभ </h3>
+                    <h3>Wedding Ceremony</h3>
                     <div class="event-col">
-                      <i class="icon-clock"></i> <span>दुपारी</span><span>१२ वा. ३१ मि</span>
+                      <i class="icon-clock"></i> <span>12:31 PM</span>
                     </div>
                     <div class="event-col">
-                      <i class="icon-calendar"></i> <span>बुधवार</span><span>दि. ०८/०५/२०१९</span>                      
+                      <i class="icon-calendar"></i> <span>Wednesday 08</span>
+                      <span>May, 2019</span>
                     </div>
                     <p>
-                      स्थळ :
-
-                      शिवतीर्थ मंगल कार्यालय , शिवनगर, माळेगाव (बु), बारामती.
+                      Venue: May 8th, 2019 Shivtirth Mangal Karyalay, Shivnagar, Malegaon(Bk)
+                      ,Baramati.
                     </p>
                   </div>
-                </div>            
-                
-   
+                </div>               
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
-
-    <div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box fadeInUp animated-fast">
-             <span>̥</span>       
-        <h3>वरील विनंतीस मान देऊन अगत्य येण्याचे करावे. 
-          </h3>
-        
-      </div>
 
     <!--    <div id="fh5co-couple-story">
       <div class="container">
@@ -509,7 +502,7 @@
   </div>
 
   <div id="map" class="fh5co-map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15168.336921789665!2d74.5122016!3d18.1139011!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x789dc799fbb9d281!2sShivtirth+Mangal+Karyalaya+Malegaon+Baramati!5e0!3m2!1sen!2sin!4v1553482489631" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15168.336921789665!2d74.5122016!3d18.1139011!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x789dc799fbb9d281!2sShivtirth+Mangal+Karyalaya+Malegaon+Baramati!5e0!3m2!1sen!2sin!4v1553482489631" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>l̥
   </div>
 
   <footer id="fh5co-footer" role="contentinfo">
